ref: move everything to the root directory

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </b>
           </h3>
           <br>
-          <img src="data/FireX-teaser.jpg" width="791" height="408" border="0"><br>
+          <img src="FireX-teaser.jpg" width="791" height="408" border="0"><br>
         </div>
         <br>
         <br>
