ref: update university abbreviation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <br><br>
               <div style="font-size:12px">
-                <sup>1</sup>CAU, Germany
+                <sup>1</sup>Kiel University, Germany
                 <br>
                 <sup>2</sup>AMU, Poland
                 <br>
@@ -48,7 +48,17 @@
         <br>
         <h4>Abstract</h4>
         <p>
-          We present a novel combustion simulation framework to model fire phenomena across solids, liquids, and gases. Our approach extends traditional fluid solvers by incorporating multi-species thermodynamics and reactive transport for fuel, oxygen, nitrogen, carbon dioxide, water vapor, and residuals. Combustion reactions are governed by stoichiometry-dependent heat release, allowing an accurate simulation of premixed and diffusive flames with varying intensity and composition. We support a wide range of scenarios including jet fires, water suppression (sprays and sprinklers), fuel evaporation, and starvation conditions. Our framework enables interactive heat sources, fire detectors, and realistic rendering of flames (e.g., laminar-to-turbulent transitions and blue-to-orange color shifts). Our key contributions include the tight coupling of species dynamics with thermodynamic feedback, evaporation modeling, and a hybrid SPH-grid representation for the efficient simulation of extinguishing fires. We validate our method through numerous experiments that demonstrate its versatility in both indoor and outdoor fire scenarios.
+          We present a novel combustion simulation framework to model fire phenomena across solids, liquids, and gases.
+          Our approach extends traditional fluid solvers by incorporating multi-species thermodynamics and reactive
+          transport for fuel, oxygen, nitrogen, carbon dioxide, water vapor, and residuals. Combustion reactions are
+          governed by stoichiometry-dependent heat release, allowing an accurate simulation of premixed and diffusive
+          flames with varying intensity and composition. We support a wide range of scenarios including jet fires, water
+          suppression (sprays and sprinklers), fuel evaporation, and starvation conditions. Our framework enables
+          interactive heat sources, fire detectors, and realistic rendering of flames (e.g., laminar-to-turbulent
+          transitions and blue-to-orange color shifts). Our key contributions include the tight coupling of species
+          dynamics with thermodynamic feedback, evaporation modeling, and a hybrid SPH-grid representation for the
+          efficient simulation of extinguishing fires. We validate our method through numerous experiments that
+          demonstrate its versatility in both indoor and outdoor fire scenarios.
         </p>
         <br>
         <h4>Video</h4>
@@ -56,7 +66,8 @@
           <table cellpadding="1" cellspacing="0">
             <tr>
               <td bgcolor="#444444">
-                <iframe width="800" height="450" src="https://www.youtube.com/embed/ntkEhRqLBg0" allow="picture-in-picture; fullscreen" allowfullscreen></iframe>
+                <iframe width="800" height="450" src="https://www.youtube.com/embed/ntkEhRqLBg0"
+                  allow="picture-in-picture; fullscreen" allowfullscreen></iframe>
               </td>
             </tr>
           </table>
