feat: add paper and citation

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </b>
           </h3>
           <br>
-          <img src="FireX-teaser.jpg" width="791" height="408" border="0"><br>
+          <img src="data/FireX-teaser.jpg" width="791" height="408" border="0"><br>
         </div>
         <br>
         <br>
@@ -73,9 +73,32 @@
           </table>
         </div>
         <br><br>
-        <h4>Paper (soon)</h4>
+        <h4>Paper</h4>
+        <table cellpadding="5" cellspacing="0" border="0">
+          <tr>
+            <td valign="center" width="55">
+              <a href="data/FireXExtinguishingFireWithStoichiometricHeatRelease.pdf">
+                <img src="data/pdf-icon.png" width="51" height="63" border="0" alt="Link to paper PDF file">
+              </a>
+            </td>
+          </tr>
+        </table>
         <br>
-        <h4>Citation (soon)</h4>
+        <h4>Citation</h4>
+        <pre>
+@article{wrede2025firex,
+  author    = {Wrede, Helge and Wagner, Anton R. and Mahfuz, Sarker Miraz 
+               and Pa{\l}ubicki, Wojtek and Michels, Dominik L. and Pirk, S{\"o}ren},
+  title     = {Fire-X: Extinguishing Fire with Stoichiometric Heat Release},
+  journal   = {ACM Transactions on Graphics (TOG)},
+  year      = {2025},
+  month     = {12},
+  volume    = {44},
+  number    = {6},
+  doi       = {10.1145/3763338},
+  pages     = {1--17}
+}
+        </pre>
       </td>
       <td width="*">&nbsp;</td>
     </tr>
