ref: update citation

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 @article{wrede2025firex,
   author    = {Wrede, Helge and Wagner, Anton R. and Mahfuz, Sarker Miraz 
                and Pa{\l}ubicki, Wojtek and Michels, Dominik L. and Pirk, S{\"o}ren},
-  title     = {Fire-X: Extinguishing Fire with Stoichiometric Heat Release},
+  title     = {Fire-{X}: Extinguishing Fire with Stoichiometric Heat Release},
   journal   = {ACM Transactions on Graphics (TOG)},
   year      = {2025},
   month     = {12},
